apps/docs/src/app/v1/components/misc/RHFRichTextEditor/page.mdx
import MuiLink from '@mui/material/Link';
import { DocsPage, PropsTable } from '@/components/docs';
import {
  componentPropsV1,
  componentMetadata,
  externalLinks,
  stackblitzFileLink
} from '@/constants';

export const metadata = componentMetadata.RHFRichTextEditor;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# MUIRichTextEditor

`MUIRichTextEditor` wraps [CKEditor 5](https://ckeditor.com/docs/ckeditor5/latest/) (`ClassicEditor`)
which allows users to format text with features such as _**bold**_, _**italics**_, _**lists**_,
_**links**_, _**images**_, and more, making it suitable for blog posts, comments, or any content 
requiring rich formatting. `CKEditor 5` is a highly customizable editor that supports advanced features
such as `codeBlocks`, `findAndReplace`, `tables`, and more.

## Installation

<Callout type="warning">
  The latest versions of [CkEditor](https://ckeditor.com/) require a paid license key.
  Therefore, we will use the free version of this package.
</Callout>

To use the latest version, refer to the [Use Latest Version section](#with-latest-version).

<PackageManagerTabs
  id="install-ckeditor5"
  command="ckeditor5@43.0.0 @ckeditor/ckeditor5-react@9.0.0"
/>

## Usage

```tsx
import MUIRichTextEditor from '@nish1896/mui-components/misc/rich-text-editor';
```

The value of `bio` will be an **HTML string**.

```tsx
const [bio, setBio] = useState('');

<MUIRichTextEditor
  fieldName="bio"
  value={bio}
  onValueChange={({ newValue }) => setBio(newValue)}
/>
```

To reorder formatting options or add advanced features, you can provide
a custom configuration via the `editorConfig` prop, or override the existing
configuration by modifying the `DefaultEditorConfig` object. You can check the 
<MuiLink href={externalLinks.githubRepo.rteConfig} target="_blank" rel="noopener noreferrer" underline="hover">default configuration here</MuiLink>.

To customize the editor theme, review the [theme customization guide](https://ckeditor.com/docs/ckeditor5/latest/framework/deep-dive/ui/theme-customization.html).

For advanced features like **findAndReplace**, **inserting images**, 
**markdown support**, and **word count**, refer to
<MuiLink href={externalLinks.githubExamples.ckEditorAdvanced} target="_blank" rel="noopener noreferrer" underline="hover">this example</MuiLink>. 
For a full list of available CKEditor features, visit the [CKEditor documentation](https://ckeditor.com/docs/ckeditor5/latest/features/index.html).

:::note
If your website supports both light and dark themes, styling `CKEditor5` for theme switching
can be challenging, as the editor doesn't dynamically adapt to theme changes once rendered.
To address this, you can override the editor's CSS based on the active theme by
referring to <MuiLink href={externalLinks.githubExamples.ckEditorCssGist} target="_blank" rel="noopener noreferrer" underline="hover">this gist</MuiLink>.

You may also refer to the [CkEditor5 documentation](https://ckeditor.com/docs/ckeditor5/latest/index.html)
for a better understanding.
:::

### With Latest Version

The latest version of **CKEditor5** requires a paid license key. To continue accessing the
newest features of the editor while preserving the underlying form logic, update your code
as follows:​

1.  **Obtain a License Key**: Acquire a commercial license key from the [CKEditor Pricing Page](https://ckeditor.com/pricing/).

2.  **Update Your CKEditor 5 Configuration**: Incorporate the licenseKey into your editor configuration:

    ```jsx
    import MUIRichTextEditor, { DefaultEditorConfig } from '@nish1896/mui-components/misc/rich-text-editor';

    <MUIRichTextEditor
      fieldName="bio"
      value={bio}
      onValueChange={({ newValue }) => setBio(newValue)}
      editorConfig={{
        licenseKey: 'YOUR_LICENSE_KEY',
        ...DefaultEditorConfig,
      }}
    />
    ```

    Replace **'YOUR_LICENSE_KEY'** with the license key you obtained. You can also
    configure your own [editor settings](https://ckeditor.com/docs/ckeditor5/latest/getting-started/setup/configuration.html#configuring-editor-settings)
    instead of using the default configuration.

## Props

Pass a custom `editorConfig` to control the CKEditor toolbar and plugins. Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable rows={componentPropsV1.RHFRichTextEditor} />
